# oatpp-cuda-whisper

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  run_tests_with_coverage.sh  test.md
.github/workflows/: ci.yml
src/: App.cpp  AppComponent.hpp  AppConfig.hpp
src/controller/: MyController.hpp
src/dto/: AudioFeatureDto.hpp  BaseResponseDto.hpp  DTOs.hpp  ErrorDto.hpp  MessageDto.hpp  ProcessDto.hpp
src/errorhandler/: GlobalErrorHandler.hpp
src/exception/: AppExceptions.hpp
src/service/: AudioService.cpp  AudioService.hpp
src/utils/: ExecutionTimer.hpp
src/validator/: RequestValidator.hpp
src/worker/: Bridge.hpp  CpuMock.cpp  GpuWorker.cpp  GpuWorker.cu  IPC.cpp  IPC.hpp  SharedMemoryStructs.hpp  WorkerMain.cpp  WorkerMain.hpp  WorkerManager.cpp  WorkerManager.hpp
test/: AudioServiceTest.cpp  AudioServiceTest.hpp  MyControllerTest.cpp  MyControllerTest.hpp  TestAppComponent.hpp  tests.cpp
test/app/: TestClient.hpp
test/errorhandler/: GlobalErrorHandlerTest.cpp  GlobalErrorHandlerTest.hpp
